--- a/style/style.css
+++ b/style/style.css
@@ -29,11 +29,16 @@ body {
     height: 100vh;
 }
 
+ul li {
+    list-style: none;
+}
+
+
+/* --------- Layout Config ----- */
 .container {
     height: 100%;
-    display: grid;
-    grid-template-columns: 40% 60%;
-    grid-template-rows: 100% 100%;
+    display: flex;
+    justify-content: center;
 }
 
 
@@ -56,7 +61,7 @@ body {
     justify-content: center;
 }
 
-/* Layout Config */
+
 
 .w-xlg {
     min-width: var(--width-xlg);
@@ -74,6 +79,33 @@ body {
     min-width: var(--width-sm);
 }
 
+
+.list {
+    display: flex;
+    flex-direction: column;
+    gap: .3rem;
+}
+
+.list .list-item {
+    margin: 0 10px;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.list .list-item span {
+    margin-left: 30px;
+}
+
+.list .list-item:hover {
+    color: var(--color-primary);
+    background-color: var(--background-lighter);
+    cursor: pointer;
+
+}
+
+
+/* -------- END Layout -------- */
+
 /* Navbar Styles */
 .nav {
     background-color: var(--background-secondary);
@@ -90,20 +122,20 @@ body {
 
     position: fixed;
     top: 0;
+    z-index: 1;
 }
 
-.nav .nav-items ul {
+.nav .nav-items {
     display: inline-flex;
     gap: 1rem;
 }
 
-.nav .nav-items ul li {
-    list-style: none;
+.nav .nav-items li {
     padding: 4px 8px;
     border-radius: 5px;
 }
 
-.nav .nav-items ul li:hover {
+.nav .nav-items li:hover {
     cursor: pointer;
 }
 
@@ -113,8 +145,14 @@ body {
 
 .sidebar {
     background-color: var(--background-secondary);
-    width: 300px;
+    width: 360px;
     height: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    z-index: 0;
 }
 
 /* ------- End Sidebar ------- */
@@ -122,7 +160,7 @@ body {
 /* ------- Body Style --------*/
 
 .body {
-    width: 720px;
+    width: 600px;
     height: inherit;
     background-color: rebeccapurple;
 }
