--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
     --background-primary: #22252A;
@@ -6,18 +6,19 @@
     --background-lighter: #373A3E;
 
     --color-primary: #fff;
-    --color-secondary: #b3b6b4;
+    --color-secondary: rgba(167, 177, 191, 1);
     --color-sucess: #0c792d;
     --color-warn: rgb(216, 75, 10);
+    --color-disabled: #959495;
 
     --width-xlg: 1920px;
     --width-lg: 1024px;
     --width-md: 840px;
     --width-sm: 412px;
 
-    --border-radius-lg: 20px;
-    --border-radius-md: 10px;
-    --border-radius-sm: 5px;
+    --border-radius-lg: 1rem;
+    --border-radius-md: .75rem;
+    --border-radius-sm: .45rem;
 }
 
 *,
@@ -26,8 +27,8 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Noto Sans', sans-serif;
-    font-weight: 300;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
 }
 
 body {
@@ -60,6 +61,7 @@ ul li {
 .active {
     color: var(--color-primary);
     background-color: var(--background-lighter);
+    font-weight: bold;
 }
 
 .center {
@@ -88,6 +90,7 @@ ul li {
     display: flex;
     flex-direction: column;
     gap: .3rem;
+    padding-bottom: 10px;
 }
 
 .list .list-item {
@@ -97,7 +100,7 @@ ul li {
 }
 
 .list .list-item span {
-    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .list .list-item:hover {
@@ -128,6 +131,7 @@ ul li {
     top: 0;
 
     z-index: 1;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .nav .nav-items {
@@ -136,12 +140,13 @@ ul li {
 }
 
 .nav .nav-items li {
-    padding: 4px 8px;
+    padding: 10px 8px;
     border-radius: var(--border-radius-sm);
+    cursor: pointer;
 }
 
 .nav .nav-items li:hover {
-    cursor: pointer;
+    background-color: var(--background-lighter);
 }
 
 /* End Navbar */
@@ -150,16 +155,32 @@ ul li {
 /* ------- Sidebar Styles -------- */
 
 .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
     background-color: var(--background-secondary);
     width: 360px;
     height: 100%;
 
-    position: fixed;
-    top: 0;
-    left: 0;
+    opacity: 1;
+    transition: opacity 1s;
 
+    padding-top: 100px;
     z-index: 0;
 }
+
+.sidebar .fade {
+    opacity: 0;
+}
+
+.sidebar .sidebar-title {
+    font-size: 20px;
+    font-weight: 500;
+    padding: 1rem;
+    border-top: 3px solid var(--background-lighter);
+}
+
+
 
 /* ------- End Sidebar ------- */
 
@@ -167,10 +188,10 @@ ul li {
 
 .content {
     height: 100%;
+    min-width: 740px;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-    overflow: auto;
 }
 
 /* ------- End Content -------- */
@@ -184,6 +205,13 @@ ul li {
     border-radius: var(--border-radius-lg);
     width: 100%;
     padding: 20px;
+    transition: transform 0.25s ease-out;
+}
+
+.card:hover {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    transform: translate(5px, -5px);
+    transform-origin: 50% 50%;
 }
 
 .card .card-header {
@@ -223,7 +251,11 @@ ul li {
 
 
 /* Tablet View */
-@media screen and (max-width: 767px) {}
+@media screen and (max-width: 767px) {
+    .card {
+        width: 420px;
+    }
+}
 
 /* Mobile View */
 @media screen and (max-width: 420px) {
@@ -237,7 +269,6 @@ ul li {
         left: 0;
         right: 0;
         min-height: 50px;
-
         justify-content: center;
     }
 
@@ -249,4 +280,53 @@ ul li {
     .nav .nav-items ul li span {
         display: none;
     }
+
+}
+
+input[type="checkbox"] {
+    display: grid;
+    place-content: center;
+
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: var(--background-secondary);
+    margin: 0;
+    cursor: pointer;
+}
+
+input[type="checkbox"] {
+    appearance: none;
+    margin: 0;
+    font: inherit;
+    color: transparent;
+    width: 1.75em;
+    height: 1.75em;
+    border: 0.15em solid var(--color-warn);
+    border-radius: var(--border-radius-sm);
+    transform: translateY(-0.075em);
+}
+
+input[type="checkbox"]::before {
+    content: "";
+    width: 0.65em;
+    height: 0.65em;
+    transform: scale(0);
+    transition: 120ms transform ease-in-out;
+    box-shadow: inset 1em 1em var(--color-primary);
+    transform-origin: bottom left;
+    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+}
+
+input[type="checkbox"]:checked::before {
+    transform: scale(1);
+}
+
+input[type="checkbox"]:focus {
+    outline: max(2px, 0.15em) solid currentColor;
+    outline-offset: max(2px, 0.15em);
+}
+
+input[type="checkbox"]:disabled {
+    color: var(--color-disabled);
+    cursor: not-allowed;
 }
