--- a/style/style.css
+++ b/style/style.css
@@ -39,8 +39,12 @@ body {
 body {
     background-color: var(--background-primary);
     color: var(--color-secondary);
-    width: 100%;
+    width: 100vw;
     height: 100vh;
+}
+
+a {
+    text-decoration: none;
 }
 
 .blue {
@@ -73,19 +77,11 @@ ul li a {
 
 /* --------- Layout Config ----- */
 .container {
-    width: 1024px;
-    margin: 0 auto;
-    /* display: flex;
-    flex-wrap: wrap;
-    flex-direction: ;
-    justify-content: center;
-     */
-    display: grid;
-    justify-content: center;
+    width: 840px;
+    height: 100vh;
+    overflow: hidden;
 
-    position: relative;
-    top: 90px;
-    padding-bottom: 60px;
+    margin: 0 auto;
 }
 
 
@@ -103,6 +99,63 @@ ul li a {
     display: flex;
     justify-content: center;
 }
+
+.btn {
+    border-radius: var(--border-radius-sm);
+
+    color: var(--color-primary);
+    padding: 5px 10px;
+    cursor: pointer;
+
+    outline: none;
+    border: none;
+
+    display: flex;
+    align-items: center;
+}
+
+.btn i {
+    margin-right: 10px;
+}
+
+.btn-sm {
+    padding: .75rem;
+}
+
+.btn-md {
+    padding: 1rem;
+}
+
+.btn-lg {
+    padding: 1.2rem;
+}
+
+
+.icon-btn {
+    background: none;
+}
+
+.icon-btn i {
+    margin-right: 0;
+}
+
+.btn-sm .icon-btn i {
+    font-size: 10px;
+}
+
+.btn-md .icon-btn i {
+    font-size: 15px;
+}
+
+.btn-lg .icon-btn i {
+    font-size: 17px;
+}
+
+
+.btn:hover {
+    background-color: var(--background-lighter);
+}
+
 
 .w-xlg {
     min-width: var(--width-xlg);
@@ -212,6 +265,10 @@ ul li a {
     background-color: var(--background-lighter);
 }
 
+.nav .avatar {
+    font-size: 25px;
+}
+
 /* End Navbar */
 
 
@@ -234,6 +291,7 @@ ul li a {
     font-weight: 500;
     padding: 1rem;
     border-top: 3px solid var(--background-lighter);
+    color: var(--color-primary);
 }
 
 .sidebar .sidebar-title i {
@@ -245,11 +303,32 @@ ul li a {
 /* ------- Content Style --------*/
 
 .content {
+    padding: 5rem 0 1rem 0;
     height: 100%;
-    min-width: 740px;
+    width: 100%;
+
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    grid-template-columns: 1 / -1;
+    gap: 1rem;
+}
+
+.content-header {
+    display: inherit;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.content-header h2 {
+    color: var(--color-primary);
+    font-weight: 600;
+}
+
+.content-body {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    grid-row-gap: 1.3rem;
 }
 
 /* ------- End Content -------- */
