--- a/style/style.css
+++ b/style/style.css
@@ -255,20 +255,6 @@ ul li a {
     gap: 1rem;
 }
 
-.nav .nav-items li {
-    padding: 10px 8px;
-    border-radius: var(--border-radius-sm);
-    cursor: pointer;
-}
-
-.nav .nav-items li:hover {
-    background-color: var(--background-lighter);
-}
-
-.nav .avatar {
-    font-size: 25px;
-}
-
 /* End Navbar */
 
 
@@ -386,33 +372,40 @@ ul li a {
 
 /* ----- END Card -------- */
 
+/* DESKTOP ONLYE */
+.desktop-only {
+    display: inline;
+}
+
+/* DESKTOP POINTS */
+
 
 /* Tablet View */
 @media screen and (max-width: 767px) {}
 
 /* Mobile View */
 @media screen and (max-width: 420px) {
-    body {
-        position: relative;
+    .desktop-only {
+        display: none;
     }
 
     .nav {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
         min-height: 50px;
-        justify-content: center;
+        padding: 0 0;
     }
 
-    .nav .nav-items ul li {
-        margin: 0px .5rem;
-        padding: 10px;
+    .container {
+        width: 360px;
     }
 
-    .nav .nav-items ul li span {
-        display: none;
+    .card .card-title {
+        font-size: 18px;
     }
+
+    .card .card-body {
+        margin-top: 20px;
+    }
+
 
 }
 
