--- a/style/collections.css
+++ b/style/collections.css
@@ -362,13 +362,17 @@ ul li a {
 
 
 /* Tablet View */
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 840px) {
     .container {
         width: 460px;
     }
 
     .card .card-title {
         font-size: 20px;
+    }
+
+    .content-body {
+        grid-template-columns: 1fr 1fr;
     }
 }
 
@@ -387,6 +391,10 @@ ul li a {
         padding: 0 0;
     }
 
+    .card {
+        height: 120px;
+    }
+
     .container {
         width: 360px;
     }
@@ -399,7 +407,13 @@ ul li a {
         margin-top: 20px;
     }
 
+    .content-body {
+        grid-template-columns: 1fr;
+    }
 
+    .card .card-header .card-icon i {
+        font-size: 15px;
+    }
 }
 
 /* -------- SCROLLBAR DESIGN  --------*/
