adding new featuer tab contoller buttons

--- a/style/collections.css
+++ b/style/collections.css
@@ -85,25 +85,9 @@ ul li a {
     margin: 0 auto;
 }
 
-
-.hidden {
-    display: none;
-}
-
-.active {
-    color: var(--color-primary);
-    background-color: var(--background-lighter);
-    font-weight: bold;
-}
-
-.center {
-    display: flex;
-    justify-content: center;
-}
-
 .btn {
     border-radius: var(--border-radius-sm);
-
+    background: none;
     color: var(--color-primary);
     padding: 5px 10px;
     cursor: pointer;
@@ -114,6 +98,12 @@ ul li a {
     display: flex;
     align-items: center;
 }
+
+
+.btn.btn-outline {
+    border: 2px solid var(--background-lighter);
+}
+
 
 .btn i {
     margin-right: 10px;
@@ -184,6 +174,20 @@ ul li a {
     transform: translate(2px, 0px);
 }
 
+.hidden {
+    display: none;
+}
+
+.active {
+    color: var(--color-primary);
+    background-color: var(--background-lighter);
+    font-weight: bold;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+}
 
 /* -------- END Layout -------- */
 
@@ -348,6 +352,16 @@ ul li a {
 }
 
 /* ----- END Card -------- */
+
+/* ----- TAB Contoller Desing */
+
+.tab {
+    display: flex;
+    gap: 1rem;
+}
+
+/* ----- END TAB Controler */
+
 
 /* DESKTOP ONLYE */
 .desktop-only {
