--- a/style/collections.css
+++ b/style/collections.css
@@ -187,6 +187,8 @@ ul li a {
 .center {
     display: flex;
     justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
 
 /* -------- END Layout -------- */
