--- a/style/collections.css
+++ b/style/collections.css
@@ -268,6 +268,8 @@ ul li a {
     display: inherit;
     justify-content: space-between;
     align-items: center;
+    margin: 1rem 3rem 2rem 0;
+
 }
 
 .content-header h2 {
