--- a/style/style.css
+++ b/style/style.css
@@ -302,6 +302,7 @@ ul li a {
     display: inherit;
     justify-content: space-between;
     align-items: center;
+    margin: 1rem 3rem 2rem 0;
 }
 
 .content-header h2 {
