--- a/style/style.css
+++ b/style/style.css
@@ -45,6 +45,7 @@ body {
 
 a {
     text-decoration: none;
+    color: inherit;
 }
 
 .blue {
@@ -198,6 +199,8 @@ ul li a {
 .center {
     display: flex;
     justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
 
 /* -------- END Layout -------- */
@@ -245,7 +248,7 @@ ul li a {
     position: fixed;
     top: 0;
 
-    z-index: 1;
+    z-index: 2;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
@@ -268,7 +271,7 @@ ul li a {
     height: 100%;
 
     padding-top: 100px;
-    z-index: 0;
+    z-index: 1;
 }
 
 .sidebar .sidebar-title {
@@ -391,6 +394,38 @@ ul li a {
 }
 
 /* DESKTOP POINTS */
+
+/* ----- FORM Desing ----- */
+
+.form-control {
+    position: relative;
+}
+
+.form-control .form-button {
+    background-color: var(--background-lighter);
+    position: absolute;
+    left: 0;
+    margin: 6px;
+    border-radius: var(--border-radius-md);
+    z-index: 1;
+}
+
+.form-control input {
+    width: 100%;
+    margin-right: 15px;
+    height: 3.75rem;
+    z-index: 0;
+    background: transparent;
+    border-radius: var(--border-radius-lg);
+    color: var(--color-primary);
+    padding-left: 3.75rem;
+    outline: none;
+    border: 0.15em solid var(--background-lighter);
+    font-size: 20px;
+    z-index: 0;
+}
+
+/* ----- End Form -------- */
 
 
 /* Tablet View */
